# Lifting-Line-Theory

./: .gitignore  CMakeLists.txt  Readme.md  analysis_functions.cpp  analysis_functions.h  main.cpp
LLT/: CMakeLists.txt  LiftingLine.cpp  LiftingLine.h
airfoil_data/AVISTAR/: AVISTAR_T1_Re0.500_M0.00_N9.0.txt  AVISTAR_T1_Re1.000_M0.00_N9.0.txt  AVISTAR_T1_Re1.500_M0.00_N9.0.txt  AVISTAR_T1_Re2.000_M0.00_N9.0.txt  AVISTAR_T1_Re2.500_M0.00_N9.0.txt  AVISTAR_T1_Re3.000_M0.00_N9.0.txt
airfoil_data/E209/: E209_T1_Re0.500_M0.00_N9.0.txt  E209_T1_Re1.000_M0.00_N9.0.txt  E209_T1_Re1.500_M0.00_N9.0.txt  E209_T1_Re2.000_M0.00_N9.0.txt  E209_T1_Re2.500_M0.00_N9.0.txt  E209_T1_Re3.000_M0.00_N9.0.txt
airfoil_data/EPPLER_715/: EPPLER 715_T1_Re0.500_M0.00_N9.0.txt  EPPLER 715_T1_Re1.000_M0.00_N9.0.txt  EPPLER 715_T1_Re1.500_M0.00_N9.0.txt  EPPLER 715_T1_Re2.000_M0.00_N9.0.txt  EPPLER 715_T1_Re2.500_M0.00_N9.0.txt  EPPLER 715_T1_Re3.000_M0.00_N9.0.txt
airfoil_data/NACA_2414/: NACA 2414_T1_Re0.500_M0.00_N9.0.txt  NACA 2414_T1_Re1.000_M0.00_N9.0.txt  NACA 2414_T1_Re1.500_M0.00_N9.0.txt  NACA 2414_T1_Re2.000_M0.00_N9.0.txt  NACA 2414_T1_Re2.500_M0.00_N9.0.txt  NACA 2414_T1_Re3.000_M0.00_N9.0.txt
airfoil_data/NACA_2415/: NACA 2415_T1_Re0.500_M0.00_N9.0.txt  NACA 2415_T1_Re1.000_M0.00_N9.0.txt  NACA 2415_T1_Re1.500_M0.00_N9.0.txt  NACA 2415_T1_Re2.000_M0.00_N9.0.txt  NACA 2415_T1_Re2.500_M0.00_N9.0.txt  NACA 2415_T1_Re3.000_M0.00_N9.0.txt
airfoil_data/S2027/: S2027_T1_Re0.500_M0.00_N9.0.txt  S2027_T1_Re1.000_M0.00_N9.0.txt  S2027_T1_Re1.500_M0.00_N9.0.txt  (+3 more)
(+6 files in other folders)
